Fix shop window

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -203,7 +203,7 @@ button i {
     display: flex;
     align-items: center;
     justify-content: center;
-    /* display: none; */
+    display: none;
 }
 
 .shop-win .shop-menu {
