--- a/assets/styles.css
+++ b/assets/styles.css
@@ -14,12 +14,12 @@ body {
     overflow: hidden;
     width: 100vw;
     height: 100vh;
+    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("./Hu.Tao.full.3511224.jpg") center/cover no-repeat;
 }
 
 .container {
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("./Hu.Tao.full.3511224.jpg") center/cover no-repeat;
     position: relative;
 }
 
@@ -145,7 +145,7 @@ html * {
 }
 
 .credits {
-    border-top: 1px solid;
+    border-bottom: 1px solid;
     width: 100%;
     height: 30px;
     display: flex;
@@ -300,7 +300,7 @@ table .table-head {
 }
 
 
-@media (max-width: 500px) {
+@media (max-width: 720px) {
     .main .profile {
         width: 400px;
         height: 260px;
@@ -365,5 +365,9 @@ table .table-head {
     .shop-win .shop-menu {
         width: 400px;
         height: 260px;
+    }
+
+    .container {
+        height: 95%;
     }
 }
