--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,151 +1,388 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
 
 * {
-    box-sizing: border-box;
-    color: white;
-    font-family: "Roboto", sans-serif;
-    user-select: none;
+  box-sizing: border-box;
+  color: white;
+  font-family: "Roboto", sans-serif;
+  user-select: none;
 }
 
 body {
-    margin: 0;
-    top: 0;
-    left: 0;
-    overflow: hidden;
-    width: 100vw;
-    height: 100vh;
+  margin: 0;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("./Hu.Tao.full.3511224.jpg") center/cover no-repeat;
 }
 
 .container {
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("./Hu.Tao.full.3511224.jpg") center/cover no-repeat;
+  width: 100%;
+  height: 100%;
+  position: relative;
 }
 
 .container .main {
-    width: 100%;
-    height: 80%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  height: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .container .secondary {
-    width: 100%;
-    height: 20%;
-    align-content: center;
-    justify-content: center;
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
+  width: 100%;
+  height: calc(20% - 30px);
+  align-content: center;
+  justify-content: center;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
 }
 
 .main .profile {
-    display: flex;
-    border: 2px solid;
-    border-radius: 5px;
-    width: 600px;
-    height: 160px
+  display: flex;
+  border: 2px solid;
+  border-radius: 5px;
+  width: 600px;
+  height: 260px;
 }
 
 .profile .picture {
-    border-top-left-radius: 5px;
-    border-bottom-left-radius: 5px;
-    width: 160px;
-    height: 100%;
-    background: url("./favico.jpg") center/cover no-repeat;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  width: 160px;
+  height: 160px;
+  background: url("./favico.jpg") center/cover no-repeat;
 }
 
 .profile .stats {
-    border-left: 2px solid;
-    width: calc(100% - 160px);
-    height: 100%;
+  border-left: 2px solid;
+  width: calc(100% - 160px);
+  height: 100%;
 }
 
 .stats .header {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-bottom: 2px solid;
-    width: 100%;
-    height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 60px;
 }
 
 .stats .info {
-    display: flex;
-    height: calc(100% - 60px);
-    width: 100%;
+  display: flex;
+  height: calc(100% - 160px);
+  width: 100%;
 }
 
-.info .lvl {
-    border-right: 2px solid;
-    width: 50%;
-    height: 100%;
+.info .lvl,
+.info .mny {
+  border-right: 2px solid;
+  width: 50%;
+  height: 100px;
+  border-top: 2px solid;
 }
 
-.info .clicks {
-    width: 50%;
-    height: 100%;
+.info .clicks,
+.info .resets {
+  width: 50%;
+  height: 100%;
+  border-top: 2px solid;
 }
 
 .head {
+  width: 100%;
+  height: 30px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  font-size: small;
+}
+
+.count {
+  width: 100%;
+  height: calc(100% - 30px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 36px;
+}
+
+.beginner {
+  color: #8bc34a;
+  border-color: #8bc34a;
+  transition: all 0.5s ease;
+}
+
+.intermediate {
+  color: #ffeb3b;
+  border-color: #ffeb3b;
+  transition: all 0.5s ease;
+}
+
+.experienced {
+  color: #ffc107;
+  border-color: #ffc107;
+  transition: all 0.5s ease;
+}
+
+.advanced {
+  color: #bb8d01;
+  border-color: #bb8d01;
+  transition: all 0.5s ease;
+}
+
+.expert {
+  color: #9c5fff;
+  border-color: #9c5fff;
+  transition: all 0.5s ease;
+}
+
+html * {
+  color: inherit !important;
+  border-color: inherit !important;
+}
+
+.credits {
+  border-bottom: 2px solid;
+  width: 100%;
+  height: 30px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.buttons {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.buttons button {
+  width: 60px;
+  height: 50px;
+  background-color: transparent;
+  font-size: medium;
+  border-radius: 10px;
+  transition: all 0.3s ease-in-out;
+  margin: 0 5px;
+  box-shadow: none;
+}
+
+.buttons button:hover {
+  width: 70px;
+  height: 60px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 0 10px;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+.buttons button:active {
+  background-color: rgba(0, 0, 0, 0.3);
+  transform: scale(0.95);
+}
+
+button i {
+  font-size: 30px;
+  color: #fff;
+}
+
+.container .shop-win {
+  position: absolute;
+  backdrop-filter: blur(5px);
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: none;
+}
+
+.shop-win .shop-menu {
+  border: 2px solid;
+  border-radius: 5px;
+  width: 600px;
+  height: 260px;
+  background-color: rgba(27, 10, 10, 0.5);
+}
+
+.shop-menu .head {
+  padding: 5px;
+  display: flex;
+  width: 100%;
+  height: 50px;
+  border-bottom: 2px solid;
+  align-items: center;
+  justify-content: space-between;
+  font-size: 30px;
+}
+
+.head i:hover {
+  cursor: pointer;
+}
+
+.shop-menu .primary {
+  width: 100%;
+  height: calc(100% - 50px);
+}
+
+.primary table {
+  width: 100%;
+  height: 100%;
+  border-collapse: collapse;
+  table-layout: fixed;
+}
+
+table .table-head {
+  height: 40px;
+  font-size: 24px;
+  border-bottom: 1px solid;
+}
+
+.shop-menu .primary table .group .label,
+.shop-menu .primary table .group .price,
+.shop-menu .primary table .table-head .label,
+.shop-menu .primary table .table-head .price {
+  text-align: center;
+  vertical-align: middle;
+}
+
+.shop-menu .primary table .group .label,
+.table-head .label {
+  width: 70%;
+  border-right: 2px solid;
+}
+
+.shop-menu .primary table .group .price {
+  width: 30%;
+  font-size: 22px;
+}
+
+.group button {
+  background: transparent;
+  border-radius: 10px;
+  font-size: 20px;
+  width: 120px;
+  height: 35px;
+  transition: 0.5s ease-in-out;
+}
+
+.group button:hover {
+  background: transparent;
+  width: 130px;
+  height: 40px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.group button i {
+  font-size: 18px;
+}
+
+@media (max-width: 720px) {
+  .main .profile {
+    width: 350px;
+    height: 260px;
+  }
+
+  .profile .picture {
+    width: 120px;
+    height: 120px;
+  }
+
+  .profile .stats {
+    border-left: 2px solid;
+    width: calc(100% - 120px);
+    height: 100%;
+  }
+
+  .stats .header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 60px;
+  }
+
+  .stats .info {
+    display: flex;
+    height: calc(100% - 160px);
+    width: 100%;
+  }
+
+  .info .lvl,
+  .info .mny {
+    border-right: 2px solid;
+    width: 50%;
+    height: 100px;
+    border-top: 2px solid;
+  }
+
+  .info .clicks,
+  .info .resets {
+    width: 50%;
+    height: 100%;
+    border-top: 2px solid;
+  }
+
+  .head {
     width: 100%;
     height: 30px;
     display: flex;
     align-items: flex-end;
     justify-content: center;
-    font-size: small;
-}
+    font-size: medium;
+  }
 
-.count {
+  .count {
     width: 100%;
     height: calc(100% - 30px);
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 48px;
-}
+    font-size: 26px;
+  }
 
-.beginner {
-    color: #8BC34A;
-    border-color: #8BC34A;
-    transition: all 0.5s ease;
-}
+  .shop-win .shop-menu {
+    width: 350px;
+    height: 260px;
+    padding: 0;
+  }
 
-.intermediate {
-    color: #FFEB3B;
-    border-color: #FFEB3B;
-    transition: all 0.5s ease;
-}
+  .container {
+    height: 95%;
+  }
 
-.experienced {
-    color: #FFC107;
-    border-color: #FFC107;
-    transition: all 0.5s ease;
-}
+  .group button {
+    font-size: 16px;
+  }
 
-.advanced {
-    color: #bb8d01;
-    border-color: #bb8d01;
-    transition: all 0.5s ease;
-}
+  .group button i {
+    font-size: 14px;
+  }
 
-.expert {
-    color: #9c5fff;
-    border-color: #9c5fff;
-    transition: all 0.5s ease;
-}
+  .shop-menu .primary table .group .label,
+  .table-head .label {
+    width: 60%;
+  }
 
-html * {
-    color: inherit !important;
-    border-color: inherit !important;
-}
+  .shop-menu .primary table .group .price {
+    width: 40%;
+  }
 
-.secondary .credits {
-    border: 1px solid white;
-    width: 100%;
-    height: 30px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  .shop-menu .primary table .table-head {
+    padding: 0;
+    border-bottom: 1px solid;
+    box-sizing: border-box;
+  }
 }
