--- a/assets/styles.css
+++ b/assets/styles.css
@@ -42,6 +42,36 @@ body {
   justify-content: center;
 }
 
+#file-input {
+  display: none;
+}
+
+.upload-btn {
+  cursor: pointer;
+  padding: 10px 20px;
+  background-color: transparent;
+  border: 1px solid;
+  border-radius: 10px;
+  margin-top: 20px;
+  text-align: center;
+  width: 130px;
+  height: 40px;
+  transition: 0.3s ease-in-out;
+}
+
+.upload-btn:hover {
+  background-color: rgba(0, 0, 0, 0.4);
+  width: 140px;
+}
+
+.main .profile .picture-area {
+  height: 100%;
+  width: 160px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .main .profile {
   display: flex;
   border: 2px solid;
@@ -350,7 +380,7 @@ table .table-head {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: 26px;
+    font-size: 24px;
   }
 
   .shop-win .shop-menu {
@@ -378,11 +408,39 @@ table .table-head {
 
   .shop-menu .primary table .group .price {
     width: 40%;
+    font-size: 18px;
   }
 
   .shop-menu .primary table .table-head {
     padding: 0;
     border-bottom: 1px solid;
     box-sizing: border-box;
+  }
+
+  .main .profile .picture-area {
+    height: 100%;
+    width: 120px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .upload-btn {
+    cursor: pointer;
+    padding: 5px 10px;
+    background-color: transparent;
+    border: 1px solid;
+    border-radius: 10px;
+    margin-top: 20px;
+    text-align: center;
+    width: 100px;
+    height: 50px;
+    transition: 0.3s ease-in-out;
+  }
+
+  .upload-btn:hover {
+    background-color: rgba(0, 0, 0, 0.4);
+    width: 100px;
+    border-radius: 5px;
   }
 }
